--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,10 +1,10 @@
 .about-container {
 	width: 100%;
-	height: 1080px;
+	height: 1024px;
 	background-image: url("../assets/about-background.gif");
 	position: absolute;
 	top: 45px;
-	/* left: 0; */
+	left: 0;
 	/* background-size: cover; */
 }
 
